# rust_hexagonal_arch

./: .env  .gitignore  Cargo.toml  README.md
snapshots/v1.4.3/windows_amd64/: postgres_scanner.duckdb_extension.info
src/: app.rs  main.rs
src/api/features/: order_feature.rs  order_handler.rs
src/application/services/order/: order_service.rs
src/application/traits/: order_trait.rs
src/applications/contracts/: order_trait.rs
src/applications/services/order/: order_service.rs
src/applications/services/order/domain/: order_entity.rs
src/infrastructure/database/: connection.rs  snapshot.rs
src/infrastructure/repositories/: order_repository.rs
