[package]
name = "atlas_heavy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = "0.7.16"
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
serde_json = "1.0.149"
